Small alignment fixes

--- a/public_html/css/modern-business.css
+++ b/public_html/css/modern-business.css
@@ -42,12 +42,12 @@ header.carousel .fill {
     background-position: center;
     background-size: cover;
 }
-/*Need to remove this to make it look good in small screens
+/*Need to remove this to make it look good in small screens*/
 header.carousel {
     margin: auto;
-    height: 300px;
-    width: 1000px;
-}*/
+    height: 400px;
+    width: auto;
+}
 .navbar-inverse {
     font-family: Futura, "Trebuchet MS", Arial, sans-serif;;
     background-color: #0018D1;
